--- a/theme.css
+++ b/theme.css
@@ -9,7 +9,7 @@ body
 }
 h1
 {
-  font-size: 2em;
+  font-size: 1.65em;
   font-style: normal;
   font-weight: normal;
   text-align: center;
@@ -49,7 +49,7 @@ p
   gap: 2em;
   justify-content: center;
 }
-#nonselectable
+#logotype
 {
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -58,7 +58,16 @@ p
   -o-user-select: none;
   user-select: none;
 }
-#cryptocontact:after
+#works
+{
+}
+#experience
+{
+}
+#hobby
+{
+}
+#contact:after
 {
   content: attr(user) "@" attr(domain) "." attr(extension) " | " attr(code) attr(operator) attr(number) " | " attr(city) ", " attr(country);
 }
