--- a/theme.css
+++ b/theme.css
@@ -7,7 +7,7 @@ body
 }
 h1
 {
-  font-size: 1.5em;
+  font-size: 3em;
   font-style: normal;
   font-weight: bold;
 }
@@ -15,15 +15,21 @@ h2
 {
   font-size: 1.5em;
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
 }
 h3
+{
+  font-size: 1.5em;
+  font-style: normal;
+  font-weight: normal;
+}
+h4
 {
   font-size: 1.125em;
   font-style: italic;
   font-weight: normal;
 }
-h4
+h5
 {
   font-size: 1.0em;
   font-style: normal;
