--- a/theme.css
+++ b/theme.css
@@ -16,6 +16,10 @@ h2
   font-size: 1.5em;
   font-style: normal;
   font-weight: bold;
+  padding-top: 0.5em;
+  padding-bottom: 0.25em;
+  margin-top: 0.5em;
+  margin-bottom: 0.25em;
 }
 h3
 {
@@ -28,6 +32,10 @@ h4
   font-size: 1.125em;
   font-style: italic;
   font-weight: normal;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 }
 h5
 {
@@ -40,6 +48,10 @@ p
   font-size: 1.125em;
   font-style: normal;
   font-weight: normal;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 }
 .container
 {
