--- a/theme.css
+++ b/theme.css
@@ -10,6 +10,10 @@ h1
   font-size: 3em;
   font-style: normal;
   font-weight: bold;
+  padding-top: 0.1em;
+  padding-bottom: 0.1em;
+  margin-top: 0.1em;
+  margin-bottom: 0.1em;
 }
 h2
 {
