--- a/theme.css
+++ b/theme.css
@@ -132,3 +132,11 @@ p
   font-weight: bold;
   font-style: normal;
 }
+/* Width enough to fit enought at least 3 columns with either low or high resolution display */
+@media (min-width: 48em) and (max-resolution: 192dpi), (min-width: 96em) and (min-resolution: 192dpi)
+{
+  .container
+  {
+    grid-template-columns: repeat(auto-fit, 20em);
+  }
+}
